--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Chat App</string>
     <string name="sign_out">Выйти</string>
     <string name="sign_in">Войти</string>
+    <string name="share">Поделиться</string>
+    <string name="delete">Удалить</string>
 </resources>
