--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="sign_in">Войти</string>
     <string name="share">Поделиться</string>
     <string name="delete">Удалить</string>
+    <string name="message_image">Сообщение-картинка</string>
 </resources>
